# play-mozjs

./: CMakeLists.txt  README.md  debugger-script.js  debugger-wrap.cc  debugger-wrap.h  main.cc  scopeJs.h  script.js  socket-client.js  utils.cc  utils.h  websocket.cc  websocket.h
